# M9-TrabajoFinal-Fail-Predictor

./: README.md
app-maintenance/fail-predict-api/: requirements.txt
app-maintenance/fail-predict-api/app/: config.py
app-maintenance/fail-predict-api/app/bp_api/: models.py  resources.py  schemas.py
app-maintenance/fail-predict-api/app/bp_web/: views.py
app-maintenance/fail-predict-api/app/templates/: index.html
app-maintenance/fail-predict-api/migrations/versions/: 940d2d563373_migracion_inicial.py
app-maintenance/fail-predictor-package/: MANIFEST.in  README.md  setup.cfg
app-maintenance/fail-predictor-package/fail_predictor/: __init__.py  predictor.py
app-maintenance/fail-predictor-package/fail_predictor/ml-model/: model.pkl
app-maintenance/fail-predictor-test/: fail_predictor-0.1-py3-none-any.whl  main.py  requirements.txt
app-maintenance/ml-model/: scaler_x.pkl  scaler_y.pkl
app-maintenance/notebook/: 01_notebook_ml_maintenance.ipynb
