[metadata]
name = fail_predictor
version = 0.1
author = Miguel Huayaney
description = Paquete para predecir fallas mecánicas a partir de sus datos de funcionamiento
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
include_package_data = true
install_requires =
    numpy
    scikit-learn
    joblib
python_requires = >=3.7